抽取通用代码到新的模块demo-common，同时添加demo-rabbitmq模块，提交测试代码

--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,33 @@
 
     <groupId>org.ling</groupId>
     <artifactId>springboot-integration</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <version>${project.version}</version>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.8.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 
+    <modules>
+        <module>demo-common</module>
+        <module>demo-cache</module>
+        <module>demo-rabbitmq</module>
+        <module>demo-amqp</module>
+    </modules>
 
+    <properties>
+        <project.version>1.0-SNAPSHOT</project.version>
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
